---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Changed the mod shortcut and mod-gui icons to a proper icon instead of the 'FP' text
  Bugfixes:
    - Fixed a crash when loading a machine that doesn't have a sprite defined
    - Fixed utility dialog handcrafting trying to craft the wrong items
    - Fixed utility dialog handcrafting allowing the player to craft even if they didn't have the right permission

---------------------------------------------------------------------------------------------------
Version: 1.1.70
Date: 12. 06. 2023
  Bugfixes:
    - Fixed a crash when trying to delete a recipe in certain situations with the foldout subfloors-option enabled

---------------------------------------------------------------------------------------------------
Version: 1.1.69
Date: 08. 06. 2023
  Bugfixes:
    - Fixed that recipes would not correctly find the proper machine to use in some cases

---------------------------------------------------------------------------------------------------
Version: 1.1.68
Date: 06. 06. 2023
  Bugfixes:
    - Fixed that trying to pick a recipe for fuel would add an unrelated recipe
    - Fixed a crash when shift-clicking the add subfactory button with no existing subfactories
    - Fixed crash when trying to edit certain machines due to a missing migration of machine&beacon defaults
    - Fixed a crash when the matrix dialog would automatically open

---------------------------------------------------------------------------------------------------
Version: 1.1.67
Date: 05. 06. 2023
  Changes:
    - Changed the blueprint storage to support blueprint books as well
    - Moved the info/warning/error messages from the top to the bottom
    - Changed locale to use the controller-compatible button names versions where possible
    - Bumped the required Factorio version to 1.1.82
  Bugfixes: